Split project into proper modules.
* Core for the original ImageToGraph
* CLI for the original CLI
* Web for Quarkus + Qute proper (not reading resources manually etc.)
* Bundle (new) for a JLink executable bundle, should generate something usable with JVM on Windows, too
* Refactored the result a bit to not leak module boundaries
* Aaah, JDK 9+ modules, needed for JLink
* Also, because of refactoring, throw in Spotless, but without palantir.